--- a/settings.gradle
+++ b/settings.gradle
@@ -107,6 +107,7 @@ include ":sdks:java:io:jdbc"
 include ":sdks:java:io:jms"
 include ":sdks:java:io:kafka"
 include ":sdks:java:io:kinesis"
+include ":sdks:java:io:kinesis2"
 include ":sdks:java:io:kudu"
 include ":sdks:java:io:mongodb"
 include ":sdks:java:io:mqtt"
